--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,18 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "cocur/slugify": "^4.0",
+        "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.8",
         "sensio/framework-extra-bundle": "^6.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/maker-bundle": "^1.29",
+        "symfony/proxy-manager-bridge": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
         "symfony/var-dumper": "5.1.*",
         "symfony/yaml": "5.1.*",
