--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "liorchamla/faker-prices": "^2.0",
+        "mbezhanov/faker-provider-collection": "^2.0",
         "sensio/framework-extra-bundle": "^6.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
@@ -18,6 +20,7 @@
         "symfony/framework-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.29",
         "symfony/proxy-manager-bridge": "5.1.*",
+        "symfony/string": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
         "symfony/var-dumper": "5.1.*",
         "symfony/yaml": "5.1.*",
@@ -70,5 +73,8 @@
             "allow-contrib": false,
             "require": "5.1.*"
         }
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.13"
     }
 }
