--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,9 @@ security:
                 username_parameter: login[email]
                 password_parameter: login[password]
 
+            logout:
+                path: /logout
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
