--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,18 +18,19 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
-#            guard:
-#                authenticators:
-#                    - App\Security\LoginFormAuthenticator
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
 
-            form_login:
-                login_path: security_login # Où est le form
-                check_path: security_login # A quelle adresse on envoie les info (à écouter par Authent..)
-                username_parameter: login[email]
-                password_parameter: login[password]
+#            form_login:
+#                login_path: security_login # Où est le form
+#                check_path: security_login # A quelle adresse on envoie les info (à écouter par Authent..)
+#                username_parameter: login[email]
+#                password_parameter: login[password]
 
             logout:
                 path: /logout
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -40,5 +41,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+#         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
