--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,6 @@ twig:
         - bootstrap_4_layout.html.twig
     globals:
         categoryRepository: '@App\Repository\CategoryRepository'
+#    number_format:
+#        decimal_point: ,
+#        thousands_separator: ' '
