--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,6 +4,7 @@ twig:
         - bootstrap_4_layout.html.twig
     globals:
         categoryRepository: '@App\Repository\CategoryRepository'
+        cartService: '@App\Cart\CartService'
 #    number_format:
 #        decimal_point: ,
 #        thousands_separator: ' '
