Doctrine Entity Listeners for Category & Product slug

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -46,3 +46,9 @@ services:
 
 #    App\EventDispatcher\PrenomListener:
 #        tags: [{name: kernel.event_listener, event: kernel.request, method: addPrenomToAttributes}]
+
+    App\Doctrine\Listener\ProductSlugListener:
+        tags: [{name: 'doctrine.orm.entity_listener', event: prePersist, entity: App\Entity\Product}]
+
+    App\Doctrine\Listener\CategorySlugListener:
+        tags: [{name: 'doctrine.orm.entity_listener', event: prePersist, entity: App\Entity\Category}]
