Install Mailtrap mailer + send test email with TemplatedEmail

--- a/.env
+++ b/.env
@@ -25,8 +25,12 @@ APP_SECRET=xxxxx
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 STRIPE_PUBLIC_KEY=xxxxx
 STRIPE_SECRET_KEY=xxxxx
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://48e3dd78b027d2:d7f1d40af6d494@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/mailer ###
